--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask>=2.2
+Flask==2.2.5
 Flask-SQLAlchemy==3.0.3
 bcrypt==3.2.0
 Flask-Session==0.8.0
@@ -8,3 +8,4 @@ Flask-WTF==1.0.1
 Flask-Uploads==0.2.1
 Flask-SocketIO==5.3.2
 eventlet==0.33.0
+MarkupSafe==2.1.1
