--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ bcrypt==3.2.0
 Flask-Session==0.8.0
 Gunicorn==20.1.0
 Flask-Migrate==3.1.0
-Flask-WTF==1.1.1
+Flask-WTF  # Remove the version specifier
 Flask-Uploads==0.2.1
 Flask-SocketIO==5.3.2
 eventlet==0.33.0
 MarkupSafe==2.1.1
-Werkzeug==2.3.7  
